--- a/event_radar/pubspec.yaml
+++ b/event_radar/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.0
   provider: ^6.1.4
+  google_maps_flutter: ^2.12.1
+  cloud_firestore: ^5.6.6
+  geolocator: ^13.0.4
+
 
 dev_dependencies:
   flutter_test:
