--- a/event_radar/pubspec.yaml
+++ b/event_radar/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   google_maps_flutter: ^2.12.1
   cloud_firestore: ^5.6.6
   geolocator: ^13.0.4
+  intl: ^0.20.2
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.5
+  image_cropper: ^9.1.0
 
 
 dev_dependencies:
