--- a/event_radar/pubspec.yaml
+++ b/event_radar/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.4.5
   image_cropper: ^9.1.0
+  firebase_app_check: ^0.3.2+5
 
 
 dev_dependencies:
