--- a/event_radar/pubspec.yaml
+++ b/event_radar/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^12.4.5
   image_cropper: ^9.1.0
   firebase_app_check: ^0.3.2+5
+  flutter_dotenv: ^5.2.1
 
 
 dev_dependencies:
@@ -62,7 +63,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - .env
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
