--- a/event_radar/pubspec.yaml
+++ b/event_radar/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_cropper: ^9.1.0
   firebase_app_check: ^0.3.2+5
   flutter_dotenv: ^5.2.1
+  url_launcher: ^6.3.1
 
 
 dev_dependencies:
