--- a/event_radar/pubspec.yaml
+++ b/event_radar/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_app_check: ^0.3.2+5
   flutter_dotenv: ^5.2.1
   url_launcher: ^6.3.1
+  firebase_auth: ^5.5.2
+  go_router: ^14.8.1
 
 
 dev_dependencies:
