--- a/event_radar/android/app/src/main/AndroidManifest.xml
+++ b/event_radar/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="GOOGLE API KEY HERE"/>
+            android:value="${MAPS_API_KEY}" />
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:theme="@style/Ucrop.CropTheme"/>
