--- a/event_radar/pubspec.yaml
+++ b/event_radar/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   collection: any
   cloud_functions: ^5.4.0
   share_plus: ^11.0.0
+  firebase_messaging: ^15.2.5
+  flutter_local_notifications: ^19.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
