--- a/event_radar/pubspec.yaml
+++ b/event_radar/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   go_router: ^14.8.1
   email_validator: ^2.0.0
   shared_preferences: ^2.1.0
+  add_2_calendar: ^2.0.0
 
   collection: any
   cloud_functions: ^5.4.0
