--- a/event_radar/pubspec.yaml
+++ b/event_radar/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   collection: any
   cloud_functions: ^5.4.0
   share_plus: ^11.0.0
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_test:
